2007-09-21  Kouichirou Eto  <2007 eto.com>

	* lib/qwik/farm.rb: For the trouble, do not sweep sites for now.

	* lib/qwik/qwik-service.rb: Add debug option showinactive.

2007-09-18  Kouichirou Eto  <2007 eto.com>

	* lib/qwik/site-url.rb: Check nil.
	* lib/qwik/util-basic.rb: Add NilClass#empty?

2007-09-17  Kouichirou Eto  <2007 eto.com>

	* lib/qwik/smtp-session.rb: New file for smtp-session.

	* lib/qwik/ml-processor.rb: Do not quote original body message to
	avoid transfer spam message.
	* lib/qwik/test-ms-ignore-spam.rb: Fot test it.
	* lib/qwik/catalog-ml-ja.rb: The message.
	* lib/qwik/util-sendmail.rb: Add a global variable to test sendmail.

2007-08-13  Kouichirou Eto  <2007 eto.com>

	* lib/qwik/Makefile: Reset target clean.

	* lib/qwik/act-files.rb (show_files_form_and_the_list): Divided.
	* lib/qwik/act-files.rb: Refactoring.

	* lib/qwik/act-files.rb: Force download if the filename contains
	disallowable characters.
	* lib/qwik/util-filename.rb (allowable_characters_for_path?): New
	method to check if the character only contains allowable
	characters or not.

2007-08-12  Kouichirou Eto  <2007 eto.com>

	* lib/qwik/farm.rb (each): Add check site (stub).
	* lib/qwik/farm.rb (check_inactive_sites): Check the directory is
	a site or not.

	* lib/qwik/qwikweb-server.rb: Add plugin directory.

	* lib/qwik/helper.rb: New file as load path helper.

	* lib/qwik/page-wikidb.rb: Add a test case to check tab.

	* share/super/_SiteConfig.txt: Add default setting.
	* share/super/_SiteConfig.txt: Add description.

	* lib/qwik/site-config.rb: Get default config from super site.

	* lib/qwik/site-url.rb: You can select title order of web page.
	* share/super/_SiteConfig.txt: Add setting for it.

	* share/super/_SiteConfig.txt: Change default to page title first.
	* lib/qwik/site-url.rb: Update test caeses.

	* lib/qwik/config.rb: Change test directory to '.test'.
	* lib/qwik/farm.rb: Ditto.
	* lib/qwik/act-attach.rb: Ditto.
	* lib/qwik/ml-processor.rb: Ditto.